css/main.css
html {
  background-color: #fff;
  font-family: "Libre Baskerville", serif;
  font-family: Roboto, sans-serif;
  font-family: "Open Sans", sans-serif;
}

.masthead {
  background-color: #18bcfd;
  border-bottom: .3rem solid #fff;
  color: #fff;
  text-align: center;
}

.logo {
  text-align: center;
}

.logo-text {
  width: 9em;
  font-family: Roboto, sans-serif;
}

.nav {
  text-align: center;
}

.nav a {
  color: #fff;
  text-decoration: none;
}

nav li.active a {
  color: #414141;
}

nav li a {
  color: #fff;
  text-decoration: none;
}

nav li a:hover {
  color: #414141;
}

.banner {
  background-color: #a000ff;
  min-height: 250px;
  padding: 15px;
}

section img.header {
  max-width: 100%;
}

.btn-banner {
  border-color: #fff;
  background-color: #39F7ae;
  border-radius: 50px;
}

article img {
  width: 100%;
  height: 400px;
  background-color: #d5d5d5;
}

.social {
  display: inline-block;
  width: 50px;
  height: 50px;
  background-color: rgba(255, 255, 255, 0.6);
  padding: 12px;
  border-radius: 50%;
  margin: 0 auto 10px;
  box-sizing: border-box;
  font-size: 1.5rem;
  color: #a000ff;
  transition: transform 1s;
  background-position: 50%;
  background-size: 30px 30px;
  background-repeat: no-repeat;
}

h4 {
  margin-bottom: 0;
}

.tour-icon {
  display: inline-block;
  width: 75px;
  height: 75px;
  background-color: #d5d5d5;
  padding: 12px;
  border-radius: 50%;
  background-position: 50%;
  background-size: 50% 50%;
  background-repeat: no-repeat;
}

.social:hover {
  cursor: pointer;
  background-color: #fff;
  transition: 0.4s;
}

.social.facebook {
  background-image: url("../images/facebook.png");
}

.social.instagram {
  background-image: url("../images/instagram.png");
}

.social.twitter {
  background-image: url("../images/twitter.png");
}

.tour-icon.training {
  background-image: url("../images/tennisball.png");
}

.tour-icon.fresh {
  background-image: url("../images/leaf.png");
  background-size: 30px 40px;
}

.tour-icon.health {
  background-image: url("../images/heart.png");
}

.tour-icon.keep-track {
  background-image: url("../images/eye.png");
  background-size: 40px 30px;
}

.image {
   object-fit: cover;
}

#social-wrapper {
  list-style-type: none;
  display: flex;
  justify-content: space-between;
  max-width: 400px;
  margin: 0 auto;
}

.hr-row::before,
.hr-row::after {
  display: inline-block;
  width: 40%;
  height: 2px;
  vertical-align: middle;
  border-radius: 20px;
  background: #fff;
  content: "";
}

.line {
  width: 100%;
  background: #fff;
  height: 2px;
}

.hr-row span {
  color: #fff;
}

.footer-logo {
  margin: 25px 0;
}

footer {
  background-color: #414141;
  border-top: .3rem solid #fff;
  color: #fff;
}

footer ul {
  margin-top: 25px;
}
footer li {
  padding: 5px;
}

footer ul li a {
  text-decoration: none;
  color: #fff;
}

hr {
  border-top: 2px solid #fff;
  border-radius: 25px;
}

.sign-in-back {
  background-color: #a000ff;
}

.title-white {
  color: #fff;
}

.button {
  border-color: #fff;
  background-color: #39F7ae;
  border-radius: 50px;
  min-width: 150px;
}

input {
  border-radius: 50px;
  background-color: rgba(255, 255, 255, 0.6);
  border: 0;
  text-align: center;
  height: 50px;
}

input:focus {
  outline: 0;
}

.card {
  background-color: #cecece;
  border: 2px solid #000;
  border-radius: 8px;
}

.divide {
  max-width: 45em;
  margin: 0 auto;
}

.img-fix {
  max-width: 400px;
  margin: 0 auto;
}

@media only screen and (min-width: 38em) {


  .img-flex {
    display: inline-block;
    vertical-align: middle;
  }
  .content {
    display: inline-block;
    vertical-align: middle;
  }

  .divide {
    display: flex;

  }

  .divide.reverse {
    flex-direction: row-reverse;
  }

  footer .links {
    display: flex;
    justify-content: space-between;
  }

  .footer-social-left ul {
    text-align: left;
  }

  .footer-social-right ul li {
    margin: 0 10px;
  }

}

@media only screen and (min-width: 60em) {

  .masthead {
    text-align: left;
  }

}

